--- a/ios/projectApp/Info.plist
+++ b/ios/projectApp/Info.plist
@@ -34,6 +34,13 @@
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
+	<!-- 사진/미디어 읽기 권한 -->
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>사진을 업로드하기 위해 사진 라이브러리에 접근합니다.</string>
+
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>사진을 저장하기 위해 사진 라이브러리에 접근합니다.</string>
+	<!---->
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
