--- a/package.json
+++ b/package.json
@@ -10,9 +10,23 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native/new-app-screen": "0.80.2",
+    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/native-stack": "^7.3.24",
+    "@reduxjs/toolkit": "^2.8.2",
+    "@supabase/supabase-js": "^1.35.7",
     "react": "19.1.0",
     "react-native": "0.80.2",
-    "@react-native/new-app-screen": "0.80.2"
+    "react-native-blob-util": "^0.22.2",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-gesture-handler": "^2.28.0",
+    "react-native-image-picker": "^8.2.1",
+    "react-native-modal": "^14.0.0-rc.1",
+    "react-native-safe-area-context": "^5.5.2",
+    "react-native-screens": "^4.13.1",
+    "react-native-url-polyfill": "^2.0.0",
+    "react-redux": "^9.2.0",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
